--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,7 @@ p {
     margin-top: 30px;
 
     background-color: var(--primary-bg-color);
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #EEEEEE;
 }
 
 .portfolio-subtitle {
