--- a/css/styles.css
+++ b/css/styles.css
@@ -351,10 +351,10 @@ p {
 
 .portfolio-filter-btn {
     display: block;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 21px;
-    padding-right: 21px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+    padding-right: 22px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -366,15 +366,19 @@ p {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: var(--secondary-text-color);
     background-color: var(--secondary-bg-color);
-    border-color: var(--secondary-bg-color);
+    border-width: 0;
     cursor: pointer;
     }
 .portfolio-filter-btn:hover,
 .portfolio-filter-btn:focus {
     color: var(--light-text-color);
     background-color: var(--accent-color);
-    border-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-filter-btn.first-filter-btn {
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .portfolio-list {
