--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,7 @@ p {
 
 .item-description {
     padding: 20px 24px;
+    background-color: var(--primary-bg-color);
     border: 1px solid #EEEEEE;
     border-top: none;
 }
